fix(convert): change layout so buttons aren't covered by chat (#5364)
* fix(convert): change layout so buttons aren't covered by chat

* fix(convert): remove cancel button and don't cancel on fold

* chore: remove deprecated tests

* fix: remove unused imports

--- a/src/pages/convert/campaigns/components/ContactCaptureForm/AddContactCaptureForm.less
+++ b/src/pages/convert/campaigns/components/ContactCaptureForm/AddContactCaptureForm.less
@@ -34,22 +34,7 @@
         gap: @layout-spacing-xs;
         width: 100%;
         padding: @layout-spacing-s !important;
-    }
-
-    .buttonsSeparator {
-        display: flex;
-        flex-grow: 1;
-    }
-
-    .resetBtn {
-        border: 0;
-        background-color: @grey;
-        color: @darkerGrey;
-
-        :hover {
-            background-color: @grey !important;
-            box-shadow: none !important;
-            border-color: @grey !important;
-        }
+        flex-direction: row-reverse;
+        justify-content: flex-end;
     }
 }
